# esp32bbqprobe

./: CMakeLists.txt  ESP32BBQProbe.h  LICENSE  README.md
src/: AnalogSensor.cpp  AnalogSensor.h  ArduinoAdapter.cpp  ArduinoAdapter.h  FakeArduino.cpp  FakeArduino.h  ThermalProbe.cpp  ThermalProbe.h
tests/: AnalogSensorTest.cpp  ArduinoAdapterTest.cpp
